--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "run": "node index.js"
+    "start": "node index.js"
   },
   "keywords": [],
-  "author": "Valeriia <leran14@ukr.net>",
+  "author": "Valeriia Muntian",
   "license": "ISC",
   "dependencies": {
     "axios": "^1.7.9",
